allprojects {
    apply plugin: 'java'
    apply plugin: 'checkstyle'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    group = projectGroup
    version = currentVersion

    repositories {
        mavenLocal()
        mavenCentral()
    }
    dependencies {
        implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
        testImplementation "junit:junit:4.12"
        //implementation 'org.owasp:dependency-check-gradle:3.0.1'
    }
    checkstyle {
        configFile = file("${project.rootDir}/config/checkstyle.xml")
        toolVersion = '6.19'
    }
    //apply plugin: 'org.owasp.dependencycheck'
}

dependencies {
    implementation project(":DataStructures")
}
